--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "react": "^17.0.1",
     "react-datepicker": "^3.7.0",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.2.0",
     "react-transition-group": "^4.4.1",
     "styled-components": "^5.2.1",
     "waait": "^1.0.5"
