--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "nprogress": "^0.2.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
+    "react-copy-to-clipboard": "^5.0.3",
     "react-datepicker": "^3.7.0",
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
